# sv2-tp

./: AGENTS.md
.clusterfuzzlite/: Dockerfile  build.sh  cfl-common.sh  index.html  llvm-symbolizer-wrapper.c  llvm-symbolizer-wrapper.sh  project.yaml  run-cfl-helper.sh  symbolizer.sh
.github/workflows/: ci.yml  clusterfuzzlite-batch.yml  clusterfuzzlite-build.yml  clusterfuzzlite-cron.yml  clusterfuzzlite-pr.yml  clusterfuzzlite-shared.yml
ci/test/: 00_setup_env_native.sh  03_test_script.sh  build-instrumented-llvm.sh  run-cfl-helper.sh
cmake/script/: CoverageInclude.cmake.in
contrib/: valgrind.supp
contrib/devtools/: check-deps.sh  copyright_header.py
contrib/tracing/: README.md  p2p_monitor.py
depends/: gen_id
doc/: Doxyfile.in  developer-notes.md  fuzzing.md  tracing.md
doc/design/: libraries.md
doc/man/: sv2-tp.1
src/: CMakeLists.txt  coins.h  hash.h  init.cpp  init.h  key.cpp  logging.cpp  logging.h  netaddress.cpp  netaddress.h  netbase.cpp  netbase.h  noui.cpp
src/common/: args.cpp
src/crypto/: CMakeLists.txt
src/init/: common.cpp
src/interfaces/: README.md  init.h
src/ipc/: CMakeLists.txt
src/ipc/capnp/: init-types.h  init.capnp
src/node/: context.h
src/sv2/: CMakeLists.txt  noise.cpp
src/test/: CMakeLists.txt  main.cpp  sv2_connman_tests.cpp  sv2_mock_mining.cpp  sv2_mock_mining.h  sv2_noise_tests.cpp  sv2_template_provider_tests.cpp  sv2_test_setup.cpp  sv2_test_setup.h  sv2_tester.cpp  sv2_tester.h  sv2_tp_tester.cpp  sv2_tp_tester.h  sv2_transport_tests.cpp
src/test/fuzz/: CMakeLists.txt  check_globals.cpp  fuzz.cpp  sv2_noise.cpp
src/test/util/: CMakeLists.txt  clusterfuzzlite.cpp  net.h  random.cpp  setup_common.cpp  setup_common.h
src/util/: CMakeLists.txt  sanitizer.h
test/lint/: README.md  lint-include-guards.py  lint-locale-dependence.py  lint-python-utf8-encoding.py  lint-shell.py  lint_ignore_dirs.py
test/lint/test_runner/src/: main.rs
test/sanitizer_suppressions/: ubsan
